--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,10 @@
-deploy.ant.properties.file=/Users/coco/Library/Application Support/NetBeans/8.0/tomcat70.properties
-j2ee.server.home=/Library/Tomcat/apache-tomcat-7.0.42
-j2ee.server.instance=tomcat70:home=/Library/Tomcat/apache-tomcat-7.0.42
+deploy.ant.properties.file=/Users/coco/Library/Application Support/NetBeans/8.0/config/GlassFishEE6/Properties/gfv3-1345181637.properties
+j2ee.platform.is.jsr109=true
+j2ee.server.domain=/usr/local/Cellar/glassfish/4.0/libexec/glassfish/domains/domain1
+j2ee.server.home=/usr/local/Cellar/glassfish/4.0/libexec/glassfish
+j2ee.server.instance=[/usr/local/Cellar/glassfish/4.0/libexec/glassfish:/usr/local/Cellar/glassfish/4.0/libexec/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=/usr/local/Cellar/glassfish/4.0/libexec
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=/Users/coco/Library/Application Support/NetBeans/8.0/build.properties
