--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,7 @@
-deploy.ant.properties.file=/Users/coco/Library/Application Support/NetBeans/8.0/tomcat70.properties
-j2ee.server.home=/Library/Tomcat/apache-tomcat-7.0.42
-j2ee.server.instance=tomcat70:home=/Library/Tomcat/apache-tomcat-7.0.42
-user.properties.file=/Users/coco/Library/Application Support/NetBeans/8.0/build.properties
+deploy.ant.properties.file=C:\\Users\\Benybifa\\AppData\\Roaming\\NetBeans\\8.0\\config\\GlassFishEE6\\Properties\\gfv3-574063279.properties
+j2ee.platform.is.jsr109=true
+j2ee.server.domain=C:/Users/Benybifa/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/Benybifa/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\Benybifa\\GlassFish_Server\\glassfish;C:\\Users\\Benybifa\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Users/Benybifa/GlassFish_Server
+user.properties.file=C:\\Users\\Benybifa\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
